Bug 128432 - FILEOPEN: OOXML: Incorrect category position
Summary: FILEOPEN: OOXML: Incorrect category position
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-10-28 13:00 UTC by Xisco Faulí
Modified: 2019-10-31 09:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.4 Master (105.08 KB, image/png)
2019-10-28 13:00 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-10-28 13:00:59 UTC
Created attachment 155368 [details]
comparison MSO 2010 and LibreOffice 6.4 Master

Steps to reproduce:
1. Open 92842 attachment from bug 74112

-> The categories have greater separation among them. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: c4d760b9edf0399955d30a0dfbe5f7b1b1ed37cb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-10-28 13:02:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=111c260ab2883b7906f1a66e222dbf4dc3c58c4f

author	Balazs Varga <balazs.varga991@gmail.com>	2019-10-03 20:31:44 +0200
committer	László Németh <nemeth@numbertext.org>	2019-10-07 12:36:28 +0200
commit 111c260ab2883b7906f1a66e222dbf4dc3c58c4f (patch)
tree 1f558e1da5379fdc2103157f371307077d9a4d4a
parent 0a3704d172f3c721d7b217f9bafe026c457dab55 (diff)
tdf#127777 OOXML chart export: fix "CrossBetween" for not imported charts

Bisected with: bibisect-linux64-6.4

Adding Cc: to Balazs Varga
Comment 2 Xisco Faulí 2019-10-28 13:03:37 UTC
Same behaviour with attachment 101822 [details] from bug 80569
Comment 3 Commit Notification 2019-10-30 09:18:24 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0aaad22a95d96f4da2c930d98bdba138d4e15a1

tdf#128432 OOXML chart import: fix x axis scale regression of 3D charts

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-10-31 09:40:04 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: 2d0a4182712673d8f7a5abe919cd2a1d5ece4a77
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balazs Varga, thanks for fixing this issue!!