tdf#128432 OOXML chart import: fix x axis scale regression of 3D charts

Set 3D charts ShiftedCategoryPosition value
to default true in case of BarDiagram and StockDiagram.

Regression from commit: 111c260ab2883b7906f1a66e222dbf4dc3c58c4f
tdf#127777 OOXML chart export: fix "CrossBetween" for not imported charts

Change-Id: I5bf0e6f6e7ad96e6c96c01ab18d74d51419f5e3c
Reviewed-on: https://gerrit.libreoffice.org/81695
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>