xmloff/source/chart/SchXMLAxisContext.cxx
@@ -461,6 +461,25 @@ void SchXMLAxisContext::CreateAxis()
         if( m_bAxisTypeImported )
             m_xAxisProps->setPropertyValue("AxisType", uno::makeAny(m_nAxisType) );
 
+        if( m_aCurrentAxis.eDimension == SCH_XML_AXIS_X )
+        {
+            bool bIs3DChart = false;
+            if( (xDiaProp->getPropertyValue("Dim3D") >>= bIs3DChart) && bIs3DChart )
+            {
+                OUString sChartType = m_xDiagram->getDiagramType();
+                if( sChartType == "com.sun.star.chart.BarDiagram" || sChartType == "com.sun.star.chart.StockDiagram" )
+                {
+                    Reference< chart2::XAxis > xAxis(lcl_getAxis(GetImport().GetModel(), m_aCurrentAxis.eDimension, m_aCurrentAxis.nAxisIndex));
+                    if( xAxis.is() )
+                    {
+                        chart2::ScaleData aScaleData(xAxis->getScaleData());
+                        aScaleData.ShiftedCategoryPosition = true;
+                        xAxis->setScaleData(aScaleData);
+                    }
+                }
+            }
+        }
+
         if( !m_aAutoStyleName.isEmpty())
         {
             const SvXMLStylesContext* pStylesCtxt = m_rImportHelper.GetAutoStylesContext();
