chart2/qa/extras/chart2import.cxx
@@ -132,6 +132,7 @@ public:
     void testTdf114179();
     void testTdf124243();
     void testTdf127393();
+    void testTdf128432();
     void testDeletedDataLabel();
     void testDataPointInheritedColorDOCX();
     void testExternalStrRefsXLSX();
@@ -224,6 +225,7 @@ public:
     CPPUNIT_TEST(testTdf114179);
     CPPUNIT_TEST(testTdf124243);
     CPPUNIT_TEST(testTdf127393);
+    CPPUNIT_TEST(testTdf128432);
     CPPUNIT_TEST(testDeletedDataLabel);
     CPPUNIT_TEST(testDataPointInheritedColorDOCX);
     CPPUNIT_TEST(testExternalStrRefsXLSX);
@@ -1993,6 +1995,21 @@ void Chart2ImportTest::testTdf127393()
     chart2::ScaleData aScaleData2 = xAxis->getScaleData();
     CPPUNIT_ASSERT(aScaleData2.Categories.is());
     CPPUNIT_ASSERT(!aScaleData2.ShiftedCategoryPosition);
+}
+
+void Chart2ImportTest::testTdf128432()
+{
+    load("/chart2/qa/extras/data/ods/", "tdf128432.ods");
+
+    uno::Reference< chart2::XChartDocument > xChartDoc = getChartDocFromSheet(0, mxComponent);
+    CPPUNIT_ASSERT(xChartDoc.is());
+
+    Reference<chart2::XAxis> xAxis = getAxisFromDoc(xChartDoc, 0, 0, 0);
+    CPPUNIT_ASSERT(xAxis.is());
+
+    chart2::ScaleData aScaleData = xAxis->getScaleData();
+    CPPUNIT_ASSERT(aScaleData.Categories.is());
+    CPPUNIT_ASSERT(aScaleData.ShiftedCategoryPosition);
 }
 
 namespace {
